# AppInfoScraper

./: .gitignore  My_database.db  README.md  pyproject.toml  scrapy.cfg
playstore_scraper/: categories.csv  create_categories_csv.py  database.py  items.py  middlewares.py  pipelines.py  settings.py
playstore_scraper/output/: categories.csv
playstore_scraper/spiders/: Category_Available.py  One_Category_Scrape_Scrapy.py  category.json  database.py  different_method.py  one_category_scraper.py  playstore_data.csv  playstore_data.db  playstore_scraper_advanced.py  playstore_scraper_basic.py  ranking_categories.py  review_scrapper.py
