[project]
name = "playstore-scraper"
version = "0.1.0"
description = "Play Store Apps Scraper"
authors = [
    {name = "Prashamsa Rijal",email = "prashamsarijal61@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "selenium (>=4.29.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
